Changed so much on my website

--- a/Tai_Portfolio/portfolio/index.html
+++ b/Tai_Portfolio/portfolio/index.html
@@ -60,18 +60,43 @@
 	
 			<!-- About -->
 			<section id="about">
+
+				<h1 class="capitalize mb-5">About Me</h1>
+				<p class="separator-left mb-6"></p>
 				
-				<h1 class="capitalize mb-5">About Me<br></h1>
+				<!-- Slider -->
+				<div class="swiper" data-autoplay="3000" data-effect="fade" data-loop="true" data-nav="true" data-pagination="true">
+					<div class="swiper-slide" width = 100% height = auto>
+						<img src="img/gallery/me.jpg" alt="" width = 100% height = auto>
+					</div>
+					<div class="swiper-slide" width = 100% height = auto>
+						<img src="img/gallery/hike.jpg" alt="" width = 100% height = auto>
+					</div>
+				</div>
+				<!-- /Slider -->
+
+				<div class="row pt-5">
+					<div class="col-md">
+						<p class="mb-0">Hello! I'm Taichen a Senior at Western Washington University (WWU), and currently am a part-time Web Developer for Jeopardy Magazine and a Teaching Assistant at WWU. I enjoy creating, whether that be for the internet, a new software, or even getting my hands dirty in the outdoors.</p>
+					</div>
+					<div class="col-md">
+						<p class="mb-0">I have over 1 year of experience working for large tech companies, or small organizations. While I am a proficient full-stack developer, my expertise is building front-end experiences for the user. Any type of problem solving I fully enjoy, however I like to focus my efforts towards real customer problems and solutions.</p>
+					</div>
+					<div class="col-md">
+						<p class="mb-0">Things I enjoy doing outside of work would be reading historical books, watching movies with friends and family, and going on long walks in the wilderness.</p>
+					</div>
+				</div>
+				
+				<!-- <h1 class="capitalize mb-5">About Me<br></h1>
 
 				<div class="row pt-5">
 					<div class="col-md centerAll">
 						<img src="img/portfolioPic.png" alt="">
 					</div>
 					<div class="col-md">
-						<p class="mb-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam fugiat culpa quibusdam voluptates eum repellendus
-							nostrum laborum, ullam iure sunt voluptatem minima aut similique quia tenetur vel exercitationem est facere.</p>
+						<p class="mb-0">Hello! I'm Taichen a Senior at Western Washington University (WWU), and currently am a part-time Web Developer for Jeopardy Magazine and a Teaching Assistant at WWU. I enjoy creating, whether that be for the internet, a new software, or even getting my hands dirty in the outdoors.<br><br>I have over 1 year of experience working for large tech companies, or small organizations. While I am a proficient full-stack developer, my expertise is building front-end experiences for the user. Any type of problem solving I fully enjoy, however I like to focus my efforts towards real customer problems and solutions.<br><br>Things I enjoy doing outside of work would be reading historical books, watching movies with friends and families, and going on long walks.</p>
 					</div>
-				</div>
+				</div> -->
 			</section>
 			<!-- /About -->
 	
@@ -85,22 +110,27 @@
 					<div class="timeline-item">
 						<div class="item-date">September 2020 - December 2020</div>
 						<h5>Software Developer Intern | Nooksack Salmon Enhancement Association (NSEA)</h5>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, possimus? Unde aperiam excepturi, sequi incidunt nesciunt, impedit repudiandae, architecto sit!</p>
+						<p>Worked on interactive map project to display restoration projects around Whatcom County in Washington State. Actively met with client to show progress and get feedback for next round of sprints.</p>
 					</div>
 					<div class="timeline-item">
 						<div class="item-date">June 2020 - November 2020</div>
 						<h5>Professional Services Consultant Intern - Cloud Infrastructure Architect | Amazon Web Services (AWS)</h5>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, possimus? Unde aperiam excepturi, sequi incidunt nesciunt, impedit repudiandae, architecto sit!</p>
+						<p>Developed two static web applications, with Vue.JS, and wrote content for them regarding change management for external customers and internal. Developed a dynamic web application using AWS tools, Python, and Web Development Languages to display user data.</p>
 					</div>
 					<div class="timeline-item">
 						<div class="item-date">August 2019 - September 2020</div>
 						<h5>Student Tutor | Varsity Tutors</h5>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, possimus? Unde aperiam excepturi, sequi incidunt nesciunt, impedit repudiandae, architecto sit!</p>
+						<p>Developed learning plans and personal classroom materials around student needs and learning styles.
+						 Communicated student progress to guardians, and gave them learning plans on successful school strategies to motivate their children.
+						<br><br>
+						Areas tutored: Java, JavaScript, Lua (game programming), Python, Algebra 2, Geometry, and Calculus.
+						</p>
 					</div>
 					<div class="timeline-item">
 						<div class="item-date">June 2019 - August 2020</div>
 						<h5>Prouction & Operations Manager | Herbal Face Food</h5>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, possimus? Unde aperiam excepturi, sequi incidunt nesciunt, impedit repudiandae, architecto sit!</p>
+						<p>Support all warehouse and manufacturing operations, implemented efficient processes and procedures to ensure system efficiency. Maintain/fullfill customer orders and update e-commerce web application through Shopify. 
+						</p>
 					</div>
 				</div>
 
@@ -215,7 +245,7 @@
 				<h1 data-animation="fade-in-bottom 1.2s">Hello, I'm Tai!</h1>
 				<h3 class="lead font-os" data-animation="fade-in-bottom .7s .5s">
 					<span><!--And I'm a Developer <br> -->I'm a</span>
-					<span class="text-light" data-typed="Web Developer; Traveler; Cloud Infrastructure Architect; Full Stack Developer"></span>
+					<span class="text-light" data-typed="Web Developer; Cloud Infrastructure Architect; Full Stack Developer"></span>
 				</h3>
 			</div>
 			<!-- /Caption Text -->
