--- a/Tai_Portfolio/portfolio/project1.html
+++ b/Tai_Portfolio/portfolio/project1.html
@@ -65,7 +65,7 @@
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .2s">
 					<h6 class="uppercase mt-7 mb-4">Team Members</h6>
-					<p>Daria Miller and Taichen Rose</p>
+					<p>Daria Miller / Taichen Rose</p>
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .3s">
@@ -76,7 +76,7 @@
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .4s">
 					<h6 class="uppercase mt-7 mb-4">Languages & Tools Used</h6>
 					<p>
-						Java / JavaFX / MVC Framework / Object-Oriented-Concepts / Design Patterns
+						Java / JavaFX / MVC Framework / Object-Oriented-Concepts / Design Patterns / IntelliJ IDE
 					</p>
 				</div>
 
@@ -96,13 +96,17 @@
 			<div class="container py-10">
 
 				<!-- Project Video -->
-				<div class="thumbnail-video" data-src="https://www.youtube.com/watch?v=UXEbtqU_dHs" data-poster="img/folio/3.jpg"></div>
+				<div>
+					<video width = 100% controls poster="img/folio/Deadwood/StartScreen.PNG">
+						<source class = "thumbnail-video" src="video/deadwood.mp4" type="video/mp4">
+					</video>
+				</div>
 
 				<!-- Project Text -->
 				<div class="row">
 					<div class="offset-md-2 col-md-8 text-light pt-6 pt-md-10">
 						<h2>Video of Deadwood Gameplay</h2>
-						<p>In this video, you will see __ amount of players. They will act, rehearse, move around the board, and upgrade. There is error checking, and the only actions that a player can perform will display. At the end of the game, a list of players who won will print out along with the overall score of each player. Ties are takin in account aswell.</p>
+						<p>In this video, you will see 7 players. They will act, rehearse, move around the board, and upgrade. There is error checking, and the only actions that a player can perform will display. At the end of the game, a list of players who won will print out along with the overall score of each player. Ties are taken in account aswell.</p>
 					</div>
 				</div>
 
@@ -117,39 +121,51 @@
 			<!-- Gallery Grid -->
 			<div class="grid masonry-grid mt-9" data-columns="3" data-gutter="2">
 				<figure>
-					<a href="img/folio/1.jpg" class="lazy-load" data-background="img/folio/1.jpg"
+					<a href="img/folio/Deadwood/UML.png" class="lazy-load" data-background="img/folio/Deadwood/UML.png"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/2.jpg" class="lazy-load" data-background="img/folio/2.jpg"
+					<a href="img/folio/Deadwood/StartScreen.png" class="lazy-load" data-background="img/folio/Deadwood/StartScreen.png"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/14.jpg" class="lazy-load" data-background="img/folio/14.jpg"
+					<a href="img/folio/Deadwood/Players_2.png" class="lazy-load" data-background="img/folio/Deadwood/Players_2.png"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/6.jpg" class="lazy-load" data-background="img/folio/6.jpg"
+					<a href="img/folio/Deadwood/Players_5.png" class="lazy-load" data-background="img/folio/Deadwood/Players_5.png"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/7.jpg" class="lazy-load" data-background="img/folio/7.jpg"
+					<a href="img/folio/Deadwood/Players_8.png" class="lazy-load" data-background="img/folio/Deadwood/Players_8.png"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/5.jpg" class="lazy-load" data-background="img/folio/5.jpg"
+					<a href="img/folio/Deadwood/Act_Rehearse.PNG" class="lazy-load" data-background="img/folio/Deadwood/Act_Rehearse.png"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/11.jpg" class="lazy-load" data-background="img/folio/11.jpg"
+					<a href="img/folio/Deadwood/Card_Finished.PNG" class="lazy-load" data-background="img/folio/Deadwood/Card_Finished.png"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/10.jpg" class="lazy-load" data-background="img/folio/10.jpg"
+					<a href="img/folio/Deadwood/Failed_Acting.PNG" class="lazy-load" data-background="img/folio/Deadwood/Failed_Acting.png"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/15.jpg" class="lazy-load" data-background="img/folio/15.jpg"
+					<a href="img/folio/Deadwood/Nearing_End.PNG" class="lazy-load" data-background="img/folio/Deadwood/Nearing_End.png"
+						data-lightbox="gallery"></a>
+				</figure>
+				<figure>
+					<a href="img/folio/Deadwood/TakeRole.png" class="lazy-load" data-background="img/folio/Deadwood/TakeRole.png"
+						data-lightbox="gallery"></a>
+				</figure>
+				<figure>
+					<a href="img/folio/Deadwood/Upgrade.png" class="lazy-load" data-background="img/folio/Deadwood/Upgrade.png"
+						data-lightbox="gallery"></a>
+				</figure>
+				<figure>
+					<a href="img/folio/Deadwood/EndScreen.png" class="lazy-load" data-background="img/folio/Deadwood/EndScreen.png"
 						data-lightbox="gallery"></a>
 				</figure>
 			</div>
