--- a/Tai_Portfolio/portfolio/project3.html
+++ b/Tai_Portfolio/portfolio/project3.html
@@ -67,8 +67,8 @@
 			<div class="row mt-4">
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .2s">
-					<h6 class="uppercase mt-7 mb-4">Client</h6>
-					<p>Mercedes-Benz</p>
+					<h6 class="uppercase mt-7 mb-4">Team Members</h6>
+					<p>Timothy Bui / Alec Jenab / Raza Muhammad / Robert Zhang / Taichen Rose</p>
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .3s">
@@ -77,10 +77,9 @@
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .4s">
-					<h6 class="uppercase mt-7 mb-4">Services</h6>
+					<h6 class="uppercase mt-7 mb-4">Languages & Tools Used</h6>
 					<p>
-						<a href="#services" class="text-link aside-link">Web Design</a> /
-						<a href="#services" class="text-link aside-link">Illustration</a>
+						JavaScript / AWS DynamoDB / AWS Lambda Functions / Alexa SDK 
 					</p>
 				</div>
 
@@ -97,18 +96,20 @@
 		</div>
 
 		<section data-background="#222">
-			<div class="container py-10">
+			<div class="container py-10 row mt-4 makeLeft">
 
 				<!-- Project Video -->
-				<div class="thumbnail-video" data-src="https://www.youtube.com/watch?v=UXEbtqU_dHs" data-poster="img/folio/3.jpg"></div>
+				<div class = "col-md-3">
+					<video width = 100% controls poster="">
+						<source class = "thumbnail-video" src="video/alexa.mp4" type="video/mp4">
+					</video>
+				</div>
 
 				<!-- Project Text -->
-				<div class="row">
+				<div class="col-md-8">
 					<div class="offset-md-2 col-md-8 text-light pt-6 pt-md-10">
-						<h2>Adipisci expedita quo harum voluptatum aperiam animi</h2>
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-							Quia tenetur quibusdam libero? Modi repellendus perferendis commodi qui repudiandae vel porro
-							aperiam animi, maiores error eius expedita asperiores sed quibusdam quos!</p>
+						<h2>Pre-Onboarding Skill Video</h2>
+						<p>Here is a video of sample commands we read to Amazon Track, our Alexa Skill. Alexa will</p>
 					</div>
 				</div>
 
