--- a/Tai_Portfolio/portfolio/project4.html
+++ b/Tai_Portfolio/portfolio/project4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>Taichen - Bookstore Project</title>
@@ -10,6 +11,7 @@
 	<link rel="stylesheet" href="css/theme.css">
 	<link rel="stylesheet" href="css/add.css">
 </head>
+
 <body>
 
 	<!-- Preloader -->
@@ -54,11 +56,15 @@
 					<p class="separator-left"></p>
 				</div>
 				<div class="col-md-6" data-animation="fade-in-bottom 1s .2s">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quae, totam mollitia sequi vero eum
-						facilis harum rerum nobis, cum ut quaerat reprehenderit numquam quos, minus perspiciatis
-						perferendis. Enim, perferendis.</p>
-					<p>Ea aspernatur debitis rerum repellat, optio corporis laborum. Enim ducimus, temporibus minus facilis.
-						Quae ratione voluptatem porro voluptas tenetur vel.</p>
+					<p>Dynamic Web Application that creates an Ecommerce website for ordering books. This website uses
+						AJAX functionality to dynamically output titles searched. Uses cookies to store customer
+						shopping items in cart for future checkout.</p>
+					<p>During customer checkout, will search for an existing email address in the database, and writes
+						shipping information in form on the order confirmation page. The Customer ID is encryped using
+						the Rijndael encryption algorithm. An email is sent to the customer with the order information.
+						To read more about the project, click <a
+							href="http://yorktown.cbe.wwu.edu/students/202/rosej25/BookstoreEnhancements/src/about.php">here</a>
+						to read the about page of the project.</p>
 				</div>
 			</div>
 			<!-- /about -->
@@ -66,28 +72,23 @@
 			<!-- details -->
 			<div class="row mt-4">
 
-				<div class="col-md-3" data-animation="fade-in-bottom 1s .2s">
-					<h6 class="uppercase mt-7 mb-4">Client</h6>
-					<p>Mercedes-Benz</p>
-				</div>
-
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .3s">
 					<h6 class="uppercase mt-7 mb-4">Date</h6>
 					<p>March 2020 - June 2020</p>
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .4s">
-					<h6 class="uppercase mt-7 mb-4">Services</h6>
+					<h6 class="uppercase mt-7 mb-4">Languages & Tools Used</h6>
 					<p>
-						<a href="#services" class="text-link aside-link">Web Design</a> /
-						<a href="#services" class="text-link aside-link">Illustration</a>
+						PHP / HTML / CSS / JavaScript / JQuery / MySQL Database
 					</p>
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .5s">
 					<h6 class="uppercase mt-7 mb-4">Live</h6>
 					<p>
-						<a href="#" class="text-link">See Website</a>
+						<a href="http://yorktown.cbe.wwu.edu/students/202/rosej25/BookstoreEnhancements/src/index.php"
+							class="text-link">See Website</a>
 					</p>
 				</div>
 
@@ -97,74 +98,56 @@
 		</div>
 
 		<section data-background="#222">
-			<div class="container py-10">
+			<div class="container pt-10 pb-10">
+				<h1 class="uppercase text-center text-light">Gallery</h1>
+				<p class="separator"></p>
 
-				<!-- Project Video -->
-				<div class="thumbnail-video" data-src="https://www.youtube.com/watch?v=UXEbtqU_dHs" data-poster="img/folio/3.jpg"></div>
-
-				<!-- Project Text -->
-				<div class="row">
-					<div class="offset-md-2 col-md-8 text-light pt-6 pt-md-10">
-						<h2>Adipisci expedita quo harum voluptatum aperiam animi</h2>
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-							Quia tenetur quibusdam libero? Modi repellendus perferendis commodi qui repudiandae vel porro
-							aperiam animi, maiores error eius expedita asperiores sed quibusdam quos!</p>
-					</div>
+				<!-- Gallery Grid -->
+				<div class="grid masonry-grid mt-9" data-columns="3" data-gutter="2">
+					<figure>
+						<a href="img/folio/Bookstore/home.png" class="lazy-load"
+							data-background="img/folio/Bookstore/home.png" data-lightbox="gallery"></a>
+					</figure>
+					<figure>
+						<a href="img/folio/Bookstore/search.png" class="lazy-load"
+							data-background="img/folio/Bookstore/search.png" data-lightbox="gallery"></a>
+					</figure>
+					<figure>
+						<a href="img/folio/Bookstore/singleBook.png" class="lazy-load"
+							data-background="img/folio/Bookstore/singleBook.png" data-lightbox="gallery"></a>
+					</figure>
+					<figure>
+						<a href="img/folio/Bookstore/customerReview.png" class="lazy-load"
+							data-background="img/folio/Bookstore/customerReview.png" data-lightbox="gallery"></a>
+					</figure>
+					<figure>
+						<a href="img/folio/Bookstore/cart.png" class="lazy-load"
+							data-background="img/folio/Bookstore/cart.png" data-lightbox="gallery"></a>
+					</figure>
+					<figure>
+						<a href="img/folio/Bookstore/customerCheck.png" class="lazy-load"
+							data-background="img/folio/Bookstore/customerCheck.png" data-lightbox="gallery"></a>
+					</figure>
+					<figure>
+						<a href="img/folio/Bookstore/returningCustomer.png" class="lazy-load"
+							data-background="img/folio/Bookstore/returningCustomer.png" data-lightbox="gallery"></a>
+					</figure>
+					<figure>
+						<a href="img/folio/Bookstore/email.png" class="lazy-load"
+							data-background="img/folio/Bookstore/email.png" data-lightbox="gallery"></a>
+					</figure>
+					<figure>
+						<a href="img/folio/Bookstore/about.png" class="lazy-load"
+							data-background="img/folio/Bookstore/about.png" data-lightbox="gallery"></a>
+					</figure>
 				</div>
+				<!-- /Gallery Grid -->
 
 			</div>
 		</section>
 
-
-		<div class="container pt-10 pb-10">
-			<h1 class="uppercase text-center">Gallery</h1>
-			<p class="separator"></p>
-
-			<!-- Gallery Grid -->
-			<div class="grid masonry-grid mt-9" data-columns="3" data-gutter="2">
-				<figure>
-					<a href="img/folio/1.jpg" class="lazy-load" data-background="img/folio/1.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/2.jpg" class="lazy-load" data-background="img/folio/2.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/14.jpg" class="lazy-load" data-background="img/folio/14.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/6.jpg" class="lazy-load" data-background="img/folio/6.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/7.jpg" class="lazy-load" data-background="img/folio/7.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/5.jpg" class="lazy-load" data-background="img/folio/5.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/11.jpg" class="lazy-load" data-background="img/folio/11.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/10.jpg" class="lazy-load" data-background="img/folio/10.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/15.jpg" class="lazy-load" data-background="img/folio/15.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-			</div>
-			<!-- /Gallery Grid -->
-
-		</div>
-
 		<!-- Page Navigation -->
-		<div class="page-nav">
+		<div class="page-nav" style = "padding-top: 11rem !important;">
 			<h6>See Next</h6>
 			<h1>
 				<a href="project5.html">Interactive Map Project</a>
@@ -175,23 +158,24 @@
 	</main>
 	<!-- /Main Content -->
 
-<!-- Footer -->
-<footer class="page-footer">
+	<!-- Footer -->
+	<footer class="page-footer">
 
-	<!-- Social Links -->
-	<div class="footer-social-links">
-		<a href="https://www.linkedin.com/in/taichen-rose-1191b1187/" class="color-linkedin">Linkedin</a>
-		<a href="https://github.com/willsower" class="color-github">GitHub</a>
-	</div>
+		<!-- Social Links -->
+		<div class="footer-social-links">
+			<a href="https://www.linkedin.com/in/taichen-rose-1191b1187/" class="color-linkedin">Linkedin</a>
+			<a href="https://github.com/willsower" class="color-github">GitHub</a>
+		</div>
 
-	<!-- Copyright -->
-	<small class="mt-4">&copy; Copyright; Taichen Rose 2020</small>
+		<!-- Copyright -->
+		<small class="mt-4">&copy; Copyright; Taichen Rose 2020</small>
 
-</footer>
-<!-- /Footer -->
+	</footer>
+	<!-- /Footer -->
 
 	<!-- JS -->
 	<script src="js/core.js"></script>
 	<script src="js/theme.js"></script>
 </body>
+
 </html>
