--- a/Tai_Portfolio/portfolio/project5.html
+++ b/Tai_Portfolio/portfolio/project5.html
@@ -49,16 +49,13 @@
 			<!-- about -->
 			<div class="row">
 				<div class="col-md-6" data-animation="fade-in-bottom 1s .1s">
-					<h1 class="uppercase">Bookstore Project</h1>
+					<h1 class="uppercase">Interactive Map Project</h1>
 					<p class="serif">Individual Project</p>
 					<p class="separator-left"></p>
 				</div>
 				<div class="col-md-6" data-animation="fade-in-bottom 1s .2s">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quae, totam mollitia sequi vero eum
-						facilis harum rerum nobis, cum ut quaerat reprehenderit numquam quos, minus perspiciatis
-						perferendis. Enim, perferendis.</p>
-					<p>Ea aspernatur debitis rerum repellat, optio corporis laborum. Enim ducimus, temporibus minus facilis.
-						Quae ratione voluptatem porro voluptas tenetur vel.</p>
+					<p>Interactive map to display salmon restoration projects throughout Whatcom County, Washington State. This map was contracted by the Nooksack Salmon Enhancement Association (NSEA). This map was added to NSEA's SquareSpace web application using JavaScript and MapBox.</p>
+					<p>There were two versions of this created. One being a React app which connected to MongoDB and pulled the map display from Mapbox. The other version is entirely using the MapBox API. In the end they both display the contents, allowing users to click on the icons which displays a tooltip of information.</p>
 				</div>
 			</div>
 			<!-- /about -->
@@ -66,21 +63,15 @@
 			<!-- details -->
 			<div class="row mt-4">
 
-				<div class="col-md-3" data-animation="fade-in-bottom 1s .2s">
-					<h6 class="uppercase mt-7 mb-4">Client</h6>
-					<p>Mercedes-Benz</p>
-				</div>
-
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .3s">
 					<h6 class="uppercase mt-7 mb-4">Date</h6>
 					<p>September 2020 - December 2020</p>
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .4s">
-					<h6 class="uppercase mt-7 mb-4">Services</h6>
+					<h6 class="uppercase mt-7 mb-4">Languages & Tools Used</h6>
 					<p>
-						<a href="#services" class="text-link aside-link">Web Design</a> /
-						<a href="#services" class="text-link aside-link">Illustration</a>
+                        HTML / CSS / JavaScript / React / MongoDB / MapBox / SquareSpace
 					</p>
 				</div>
 
@@ -105,10 +96,8 @@
 				<!-- Project Text -->
 				<div class="row">
 					<div class="offset-md-2 col-md-8 text-light pt-6 pt-md-10">
-						<h2>Adipisci expedita quo harum voluptatum aperiam animi</h2>
-						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-							Quia tenetur quibusdam libero? Modi repellendus perferendis commodi qui repudiandae vel porro
-							aperiam animi, maiores error eius expedita asperiores sed quibusdam quos!</p>
+						<h2>Codebase and Map Demonstration Video</h2>
+						<p>Video to display code snippets and the interactive map on NSEA's website.</p>
 					</div>
 				</div>
 
@@ -121,41 +110,17 @@
 			<p class="separator"></p>
 
 			<!-- Gallery Grid -->
-			<div class="grid masonry-grid mt-9" data-columns="3" data-gutter="2">
+			<div class="grid masonry-grid mt-3" data-columns="3" data-gutter="2">
 				<figure>
-					<a href="img/folio/1.jpg" class="lazy-load" data-background="img/folio/1.jpg"
+					<a href="img/folio/Map/EmbeddedInSquareSpace.PNG" class="lazy-load" data-background="img/folio/Map/EmbeddedInSquareSpace.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/2.jpg" class="lazy-load" data-background="img/folio/2.jpg"
+					<a href="img/folio/Map/FullMap.PNG" class="lazy-load" data-background="img/folio/Map/FullMap.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/14.jpg" class="lazy-load" data-background="img/folio/14.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/6.jpg" class="lazy-load" data-background="img/folio/6.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/7.jpg" class="lazy-load" data-background="img/folio/7.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/5.jpg" class="lazy-load" data-background="img/folio/5.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/11.jpg" class="lazy-load" data-background="img/folio/11.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/10.jpg" class="lazy-load" data-background="img/folio/10.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/15.jpg" class="lazy-load" data-background="img/folio/15.jpg"
+					<a href="img/folio/Map/InteractiveMap.PNG" class="lazy-load" data-background="img/folio/Map/InteractiveMap.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 			</div>
@@ -167,7 +132,7 @@
 		<div class="page-nav">
 			<h6>See Next</h6>
 			<h1>
-				<a href="project5.html">Interactive Map Project</a>
+				<a href="project1.html">Deadwood Board Game</a>
 			</h1>
 		</div>
 		<!-- /Page Navigation -->
