--- a/Tai_Portfolio/portfolio/project2.html
+++ b/Tai_Portfolio/portfolio/project2.html
@@ -67,8 +67,8 @@
 			<div class="row mt-4">
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .2s">
-					<h6 class="uppercase mt-7 mb-4">Client</h6>
-					<p>Mercedes-Benz</p>
+					<h6 class="uppercase mt-7 mb-4">Team Members</h6>
+					<p>Connor Barlow / Walker Herring / Jacob Nemeth / Dylon Rajah / Taichen Rose</p>
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .3s">
@@ -77,10 +77,9 @@
 				</div>
 
 				<div class="col-md-3" data-animation="fade-in-bottom 1s .4s">
-					<h6 class="uppercase mt-7 mb-4">Services</h6>
+					<h6 class="uppercase mt-7 mb-4">Languages & Tools Used</h6>
 					<p>
-						<a href="#services" class="text-link aside-link">Web Design</a> /
-						<a href="#services" class="text-link aside-link">Illustration</a>
+						Python / LaTeX / Amazon Polly / AWS EC2 / HTML / CSS / JavaScript
 					</p>
 				</div>
 
