Adding finalized changes

--- a/Tai_Portfolio/portfolio/project2.html
+++ b/Tai_Portfolio/portfolio/project2.html
@@ -5,7 +5,7 @@
 	<title>Taichen - Tex2Speech Project</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="img/favicon.png">
+	<link rel="icon" href="img/favicon.ico">
 	<link rel="stylesheet" href="css/core.css">
 	<link rel="stylesheet" href="css/theme.css">
 	<link rel="stylesheet" href="css/add.css">
