Got gallery images for alexa hackathon

--- a/Tai_Portfolio/portfolio/project3.html
+++ b/Tai_Portfolio/portfolio/project3.html
@@ -128,39 +128,15 @@
 			<!-- Gallery Grid -->
 			<div class="grid masonry-grid mt-9" data-columns="3" data-gutter="2">
 				<figure>
-					<a href="img/folio/1.jpg" class="lazy-load" data-background="img/folio/1.jpg"
+					<a href="img/folio/AmazonSkill/AmazonTrackHome.PNG" class="lazy-load" data-background="img/folio/AmazonSkill/AmazonTrackHome.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/2.jpg" class="lazy-load" data-background="img/folio/2.jpg"
+					<a href="img/folio/AmazonSkill/AmazonTrackSlide.PNG" class="lazy-load" data-background="img/folio/AmazonSkill/AmazonTrackSlide.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/14.jpg" class="lazy-load" data-background="img/folio/14.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/6.jpg" class="lazy-load" data-background="img/folio/6.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/7.jpg" class="lazy-load" data-background="img/folio/7.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/5.jpg" class="lazy-load" data-background="img/folio/5.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/11.jpg" class="lazy-load" data-background="img/folio/11.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/10.jpg" class="lazy-load" data-background="img/folio/10.jpg"
-						data-lightbox="gallery"></a>
-				</figure>
-				<figure>
-					<a href="img/folio/15.jpg" class="lazy-load" data-background="img/folio/15.jpg"
+					<a href="img/folio/AmazonSkill/AmazonTrackSlide2.PNG" class="lazy-load" data-background="img/folio/AmazonSkill/AmazonTrackSlide2.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 			</div>
