Updated interactive map of website

--- a/Tai_Portfolio/portfolio/project5.html
+++ b/Tai_Portfolio/portfolio/project5.html
@@ -91,13 +91,17 @@
 			<div class="container py-10">
 
 				<!-- Project Video -->
-				<div class="thumbnail-video" data-src="https://www.youtube.com/watch?v=UXEbtqU_dHs" data-poster="img/folio/3.jpg"></div>
+				<div>
+					<video width = 100% controls poster="img/folio/Map/NSEA.PNG">
+						<source class = "thumbnail-video" src="video/NSEAMap.mp4" type="video/mp4">
+					</video>
+				</div>
 
 				<!-- Project Text -->
 				<div class="row">
 					<div class="offset-md-2 col-md-8 text-light pt-6 pt-md-10">
-						<h2>Codebase and Map Demonstration Video</h2>
-						<p>Video to display code snippets and the interactive map on NSEA's website.</p>
+						<h2>Map Demonstration Video</h2>
+						<p>Video displays the interactive map demo on NSEA's website. Embedded using JavaScript and HTML through their SquareSpace embed mode.</p>
 					</div>
 				</div>
 
@@ -121,6 +125,18 @@
 				</figure>
 				<figure>
 					<a href="img/folio/Map/InteractiveMap.PNG" class="lazy-load" data-background="img/folio/Map/InteractiveMap.PNG"
+						data-lightbox="gallery"></a>
+				</figure>
+				<figure>
+					<a href="img/folio/Map/Dataset.PNG" class="lazy-load" data-background="img/folio/Map/Dataset.PNG"
+						data-lightbox="gallery"></a>
+				</figure>
+				<figure>
+					<a href="img/folio/Map/Style.PNG" class="lazy-load" data-background="img/folio/Map/Style.PNG"
+						data-lightbox="gallery"></a>
+				</figure>
+				<figure>
+					<a href="img/folio/Map/Codebase.PNG" class="lazy-load" data-background="img/folio/Map/Codebase.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 			</div>
