Changed name of png's for deadwood page

--- a/Tai_Portfolio/portfolio/project1.html
+++ b/Tai_Portfolio/portfolio/project1.html
@@ -125,47 +125,47 @@
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/StartScreen.png" class="lazy-load" data-background="img/folio/Deadwood/StartScreen.png"
+					<a href="img/folio/Deadwood/StartScreen.PNG" class="lazy-load" data-background="img/folio/Deadwood/StartScreen.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/Players_2.png" class="lazy-load" data-background="img/folio/Deadwood/Players_2.png"
+					<a href="img/folio/Deadwood/Players_2.PNG" class="lazy-load" data-background="img/folio/Deadwood/Players_2.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/Players_5.png" class="lazy-load" data-background="img/folio/Deadwood/Players_5.png"
+					<a href="img/folio/Deadwood/Players_5.PNG" class="lazy-load" data-background="img/folio/Deadwood/Players_5.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/Players_8.png" class="lazy-load" data-background="img/folio/Deadwood/Players_8.png"
+					<a href="img/folio/Deadwood/Players_8.PNG" class="lazy-load" data-background="img/folio/Deadwood/Players_8.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/Act_Rehearse.PNG" class="lazy-load" data-background="img/folio/Deadwood/Act_Rehearse.png"
+					<a href="img/folio/Deadwood/Act_Rehearse.PNG" class="lazy-load" data-background="img/folio/Deadwood/Act_Rehearse.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/Card_Finished.PNG" class="lazy-load" data-background="img/folio/Deadwood/Card_Finished.png"
+					<a href="img/folio/Deadwood/Card_Finished.PNG" class="lazy-load" data-background="img/folio/Deadwood/Card_Finished.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/Failed_Acting.PNG" class="lazy-load" data-background="img/folio/Deadwood/Failed_Acting.png"
+					<a href="img/folio/Deadwood/Failed_Acting.PNG" class="lazy-load" data-background="img/folio/Deadwood/Failed_Acting.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/Nearing_End.PNG" class="lazy-load" data-background="img/folio/Deadwood/Nearing_End.png"
+					<a href="img/folio/Deadwood/Nearing_End.PNG" class="lazy-load" data-background="img/folio/Deadwood/Nearing_End.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/TakeRole.png" class="lazy-load" data-background="img/folio/Deadwood/TakeRole.png"
+					<a href="img/folio/Deadwood/TakeRole.PNG" class="lazy-load" data-background="img/folio/Deadwood/TakeRole.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/Upgrade.png" class="lazy-load" data-background="img/folio/Deadwood/Upgrade.png"
+					<a href="img/folio/Deadwood/Upgrade.PNG" class="lazy-load" data-background="img/folio/Deadwood/Upgrade.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 				<figure>
-					<a href="img/folio/Deadwood/EndScreen.png" class="lazy-load" data-background="img/folio/Deadwood/EndScreen.png"
+					<a href="img/folio/Deadwood/EndScreen.PNG" class="lazy-load" data-background="img/folio/Deadwood/EndScreen.PNG"
 						data-lightbox="gallery"></a>
 				</figure>
 			</div>
